// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`push instruction compiler > float64 memory push > pushes a float64 memory identifier using f64.load 1`] = `
{
  "byteCode": [
    65,
    0,
    43,
    3,
    0,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": false,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a f64 literal value emitting f64.const 1`] = `
{
  "byteCode": [
    68,
    31,
    133,
    235,
    81,
    184,
    30,
    9,
    64,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a literal value 1`] = `
{
  "byteCode": [
    65,
    5,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a normalized f64 literal emitting f64.const 1`] = `
{
  "byteCode": [
    68,
    24,
    45,
    68,
    84,
    251,
    33,
    9,
    64,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a normalized literal value 1`] = `
{
  "byteCode": [
    65,
    42,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;
